# terrain-reforger

./: .gitignore  LICENSE  README.md  analyze_world_features.py  inference.py  main.py  prepare_dataset.py  prepare_dataset_chunked.py  pyproject.toml  train_optimized.py
src/: __init__.py  cli.py  main.py
src/autoencoder/: dataset.py  dataset_cached.py  dataset_optimized.py  decoder.py  encoder.py  quantizer.py  residual.py  samplers.py  vqvae.py  vqvae_optimized.py
src/commands/: __init__.py  analyze.py  diagnose.py  export.py  extract_tokens.py  generate.py  generate_maskgit.py  infer.py  lr_find.py  prepare.py  train.py  train_maskgit.py  train_transformer.py  worldgen.py
src/generative/: __init__.py  dataset.py  maskgit.py  masking.py  transformer.py
src/pipelines/: __init__.py  dataset_preparation.py  prepare_dataset_cli.py
src/scripts/: colab.sh  worldgen.sh
src/terraria/: __init__.py  chunk_processor.py  chunk_processor_optimized.py  converters.py  converters_optimized.py  data_structures.py  natural_ids.py  normalization.py  sampling_strategies.py  tensor_utils.py  utils.py  world_handler.py
src/utils/: __init__.py  checkpoint.py  device.py  diagnostics.py  tedit_export.py  visualization.py
